--- a/config_pnp.yaml
+++ b/config_pnp.yaml
@@ -11,8 +11,8 @@ latents_path: 'latents_forward'
 sd_version: '2.1'
 guidance_scale: 7.5
 n_timesteps: 50
-prompt: a photo of a man walks in the filed, with a milky way in the sky
-negative_prompt: ugly, blurry, black, low res, unrealistic
+prompt: a man walks in the filed, milky way 
+negative_prompt: ugly
 
 # pnp injection thresholds, ∈ [0, 1]
 pnp_attn_t: 0.5
